--- a/VendingMachine/VendingMachine/VendingMachine.csproj
+++ b/VendingMachine/VendingMachine/VendingMachine.csproj
@@ -43,10 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cash.cs" />
     <Compile Include="Controller.cs" />
-    <Compile Include="CreditCard.cs" />
-    <Compile Include="IPayment.cs" />
+    <Compile Include="Payment.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductCollection.cs" />
     <Compile Include="Program.cs" />
