--- a/VendingMachine/VendingMachine/VendingMachine.csproj
+++ b/VendingMachine/VendingMachine/VendingMachine.csproj
@@ -33,8 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,21 +52,65 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bank.cs">
+      <DependentUpon>VendingMachineDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="CardPayment.cs" />
+    <Compile Include="CashMoney.cs">
+      <DependentUpon>VendingMachineDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="CashPayment.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="IPayment.cs" />
-    <Compile Include="Product.cs" />
+    <Compile Include="Product.cs">
+      <DependentUpon>VendingMachineDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="ProductCollection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI.cs" />
+    <Compile Include="VendingMachineDM.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VendingMachineDM.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VendingMachineDM.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VendingMachineDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VendingMachineDM.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VendingMachineDM.edmx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="VendingMachineDM.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>VendingMachineDM.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="packages.config" />
+    <None Include="VendingMachineDM.edmx.diagram">
+      <DependentUpon>VendingMachineDM.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="products.txt" />
+    <Content Include="VendingMachineDM.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>VendingMachineDM.Context.cs</LastGenOutput>
+      <DependentUpon>VendingMachineDM.edmx</DependentUpon>
+    </Content>
+    <Content Include="VendingMachineDM.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>VendingMachineDM.edmx</DependentUpon>
+      <LastGenOutput>VendingMachineDM.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
