--- a/VendingMachineCodeFirst/VMCodeFirst/VMCodeFirst.csproj
+++ b/VendingMachineCodeFirst/VMCodeFirst/VMCodeFirst.csproj
@@ -67,10 +67,12 @@
       <DependentUpon>201903141350044_AccountsMoney2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Data.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductCollection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Report.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="VendMachineDbContext.cs" />
   </ItemGroup>
