--- a/VendingMachineCodeFirst/VMCodeFirst/App.config
+++ b/VendingMachineCodeFirst/VMCodeFirst/App.config
@@ -21,7 +21,7 @@
   <connectionStrings>
     <add
       name="VendMachineDbContext"
-      connectionString="data source=(localdb)\mssqllocaldb;initial catalog=VendMachineCF;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      connectionString="data source=(localdb)\mssqllocaldb;initial catalog=VendingMachineCF;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <log4net>
