--- a/VendingMachineCodeFirst/VMCodeFirst/VMCodeFirst.csproj
+++ b/VendingMachineCodeFirst/VMCodeFirst/VMCodeFirst.csproj
@@ -62,9 +62,9 @@
     <Compile Include="CashPayment.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="IPayment.cs" />
-    <Compile Include="Migrations\201903141350044_AccountsMoney2.cs" />
-    <Compile Include="Migrations\201903141350044_AccountsMoney2.Designer.cs">
-      <DependentUpon>201903141350044_AccountsMoney2.cs</DependentUpon>
+    <Compile Include="Migrations\201904071850228_CreateTransactions.cs" />
+    <Compile Include="Migrations\201904071850228_CreateTransactions.Designer.cs">
+      <DependentUpon>201904071850228_CreateTransactions.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Data.cs" />
@@ -73,6 +73,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report.cs" />
+    <Compile Include="Transaction.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="VendMachineDbContext.cs" />
   </ItemGroup>
@@ -83,8 +84,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201903141350044_AccountsMoney2.resx">
-      <DependentUpon>201903141350044_AccountsMoney2.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201904071850228_CreateTransactions.resx">
+      <DependentUpon>201904071850228_CreateTransactions.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
