--- a/VendingMachineCodeFirst/VMCodeFirst/VMCodeFirst.csproj
+++ b/VendingMachineCodeFirst/VMCodeFirst/VMCodeFirst.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Migrations\201904071850228_CreateTransactions.Designer.cs">
       <DependentUpon>201904071850228_CreateTransactions.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904090816136_pending.cs" />
+    <Compile Include="Migrations\201904090816136_pending.Designer.cs">
+      <DependentUpon>201904090816136_pending.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="Product.cs" />
@@ -74,6 +78,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report.cs" />
     <Compile Include="Transaction.cs" />
+    <Compile Include="TransactionManager.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="VendMachineDbContext.cs" />
   </ItemGroup>
@@ -86,6 +91,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201904071850228_CreateTransactions.resx">
       <DependentUpon>201904071850228_CreateTransactions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904090816136_pending.resx">
+      <DependentUpon>201904090816136_pending.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
