--- a/VendingMachineAdmin/VendingMachineAdmin/App.config
+++ b/VendingMachineAdmin/VendingMachineAdmin/App.config
@@ -1,6 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+  <configSections>
+    <section name ="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+  <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <log4net>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{ABSOLUTE} [%logger] %level -%message%newline%exception"/>
+      </layout>
+    </appender>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="E:\computer\Documents\iQuest\remotelearning\VendingMachineAdmin\MyLogFile.log"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maximumFileSize value="1MB"/>
+      <maxSizeRollBackups value="5"/>
+      <staticLogFileName value="true"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{ABSOLUTE} [%logger] %level -%message%newline%exception"/>
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG"/>
+      <appender-ref ref="ConsoleAppender"/>
+      <appender-ref ref="RollingFileAppender"/>
+    </root>
+  </log4net>
 </configuration>
