--- a/VendingMachineCodeFirst/VendingMachineWpf/App.config
+++ b/VendingMachineCodeFirst/VendingMachineWpf/App.config
@@ -1,6 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+  <configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  <section name ="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+  <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add
+      name="VendMachineDbContext"
+      connectionString="data source=(localdb)\mssqllocaldb;initial catalog=VendingMachineCF;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <log4net>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{ABSOLUTE} [%logger] %level -%message%newline%exception"/>
+      </layout>
+    </appender>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="E:\computer\Documents\iQuest\remotelearning\VendingMachineCodeFirst\MyLogFile.log"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maximumFileSize value="1MB"/>
+      <maxSizeRollBackups value="5"/>
+      <staticLogFileName value="true"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{ABSOLUTE} [%logger] %level -%message%newline%exception"/>
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG"/>
+      <appender-ref ref="ConsoleAppender"/>
+      <appender-ref ref="RollingFileAppender"/>
+    </root>
+  </log4net>
 </configuration>
